[AB-xxx] adding sticky roles module